# LECTranslate

./: CMakeLists.txt  README.md  README.rst
src/: LEC.h  Makefile  lectranslate.cpp
